--- a/statistik.org
+++ b/statistik.org
@@ -1,4 +1,4 @@
-* Allgemeines
+* TODO Allgemeines
 ** DONE data access
 vek[vek<0]
 mat[ ,1]
@@ -25,7 +25,7 @@ BRASSICA$group <- ordered(BRASSICA$group, c("control", "ancy"))
 ** TODO naming col/row
 ** convert to/from flatfiles
 colnames(matrix) <- c(names)
-* Deskriptive Statistik
+* DONE Deskriptive Statistik
 ** DONE Mittelwert
 mean(datenfeld x)
 ** DONE Standardabweichung
@@ -44,7 +44,7 @@ tapply(potato$Ertrag, INDEX=potato$Sorte, FUN=min)
 ** DONE summary
 summary(object)
 
-* Grafiken in R
+* TODO Grafiken in R
 ** DONE formula
 values y ~ grouping factor
 ** TODO formula = ~ x + y
@@ -95,14 +95,15 @@ t.test(x, y=NULL, alternative = c("less", "greater", "two.sided"), paired=FALSE,
 Vorrausetzungen: NV
 wie t.test, nur mit var.equal=FALSE
 t.test(x, y=NULL, alternative = c("less", "greater", "two.sided"), paired=FALSE, var.equal=FALSE, conf.level=0.95)
-** TODO paired test
+** DONE paired test
+Wenn zwei Messungen ‘verbunden’ (= ‘gepaart’) sind (z.B. ein Patient vor und nach einer Behandlung) nimmt man den gepaarten Test.
 ** TODO wilcoxon-test
 Vorrausetzungen: VH
 wilcox.test(x, y = NULL, alternative = c("two.sided", "less", "greater"), paired = FALSE, exact = NULL, correct=FALSE, conf.level = 0.95)
 wilcox.test(formula=content~type, data=hefe,alternative="less",conf.level=0.95,dist="exact")
 TODO: exact, dist, correct
 # what the hell ist dist="exact"
-* chi-quadrat-test
+* DONE chi-quadrat-test
 ** DONE Anpassungstest
 überprüfen, ob daten einer bestimmten (gegebenen) verteilung folgen
 H0 : F_Versuch (x) = F_Mendel (x)
@@ -117,21 +118,23 @@ chisq.test(matrix(c(12,9,14,7), ncol=2), correct = FALSE)
 
 # X-squared = 0.4038, df = 1, p-value = 0.5251
 # Je nachdem, von welchem alpha-Fehler man ausgeht, ist p signifikant oder nicht. Nimmt man alpha = 5% = 0,05 an, so ist p nicht signifikant und somit wird die Nullhypothese angenommen.
-
-
-* Korrelationsanalyse
+* DONE Korrelationsanalyse
 prüft, ob zwischen datensätzen eine korelation vorliegt.
-** Korelationskoeffizient
+** DONE Korelationskoeffizient
 Der Korelationskoeffizient gibt an, wie stark daten miteinander korelieren, also z.B. wie stark die steuung des linearen zusammenhangs ist.
 cor(x, y=NULL, method = "spearman"|"pearson")
-** analyse
+** DONE analyse
 cor.test(formula = ~Rumpf+Widerrist, data = cattle, method = "spearman", alternative = "greater”)
 #Da p-Wert kleiner als 0.1, ist Korrelation signifikant.
 #Korrelationswert von 0.58 bedeutet mäßig starke Korrelation zwischen Rumpfhöhe und Widerrist.
-** Pearson
+** DONE Pearson
 wenn alle Datensätze NV ist
-** Spearman
+** DONE Spearman
 wenn einer der Datensätze nicht NV ist
+* DONE Residuen
+Rediduen sind die Abweichungen vom Modell (also etwa einer linearen Regression)
+Lassen sie ein Muster erkennen, so ist vermutlich das Modell nicht geeignet. Wir müssen dann VarianzINhomogenität annehmen.
+http://www.statistics4u.info/fundstat_germ/img/hl_residuals.png
 * Regressionsanalyse
 * Anova
 * Multiple Mittelwerttests
@@ -141,3 +144,12 @@ wenn einer der Datensätze nicht NV ist
 ** testen
 ** nomalverteilung generieren
 * TODO Hypothesen und Ergebnisse der Test interpretieren
+* DONE Freiheitsgrade
+in R (ihm) oft mit df angegeben.
+
+f = n - u
+n .. Anzahl der Daten
+u .. Schätzbare Parameter
+
+Also wenn man etwa nur den Mittelwert (u=1) und n=10 Werte hat, dann ist der Freiheitsgrad f = 9, weil man mithilfe von 9 Werten und dem Mittelwert den 10. Berechnen kann.
+Die Freiheitsgrade werden bei der Schätzung von Varianzen benötigt. (und spielen bei manchem Hypothesentests eine Rolle)
